--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
     font-size: 64px;
     max-width: 788px;
     margin-bottom: 32px;
+    
 }
 
 .top {
@@ -37,8 +38,12 @@ body {
     color: #FFFFFF;
     font-size: 18px;
     margin-bottom: 44px;
-    max-width: 481px;
+    max-width: 481px;   
 
+}
+
+.top__text_new {
+    font-weight: 100;
 }
 
 .top__button {
