--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ body {
     line-height: 22px;
     text-align: center;
   }
+  .top__button {
+    display: block;
+    margin: auto;
+  }
   .product {
     width: 343px;
   }
