--- a/style.css
+++ b/style.css
@@ -52,6 +52,9 @@ body {
   width: 234px;
   height: 48px;
 }
+.button:hover {
+  background-color: #EB443F;
+}
 
 .product__content {
   display: flex;
@@ -63,6 +66,11 @@ body {
 
 .product {
   border-radius: 16px;
+  width: 378px;
+  height: 300px;
+}
+.product:hover {
+  border: 3px solid #44D2FF;
 }
 
 .section {
