--- a/style.scss
+++ b/style.scss
@@ -53,7 +53,10 @@ body {
     background-color: 
     #9C0332;
     width: 234px;
-    height: 48px;    
+    height: 48px;
+    &:hover {
+       background-color: #EB443F;
+    }    
 }
 
 .product__content {
@@ -66,6 +69,11 @@ body {
 
 .product {
     border-radius: 16px;
+    width: 378px;
+    height: 300px;
+    &:hover {
+        border: 3px solid #44D2FF;
+    }
 }
 
 .section {
