--- a/style.scss
+++ b/style.scss
@@ -68,6 +68,8 @@ body {
 }
 
 .product {
+    margin-top: 128px;
+    margin-bottom: 128px;
     border-radius: 16px;
     width: 378px;
     height: 300px;
@@ -82,6 +84,7 @@ body {
     padding-top: 282px;
     padding-bottom: 282px;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     &__heading {
         width: 584px;
@@ -105,3 +108,5 @@ body {
         height: 333px;
     }    
 }
+
+@import 'mobile';
