--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ body {
 }
 
 .top__title {
-  padding-left: 120px;
   padding-top: 218px;
   padding-bottom: 682px;
 }
@@ -57,14 +56,14 @@ body {
 }
 
 .product__content {
+  padding-top: 128px;
+  padding-bottom: 128px;
   display: flex;
   gap: 32px;
   background-image: url(img/Rectangle\ 5.jpg);
 }
 
 .product {
-  margin-top: 128px;
-  margin-bottom: 128px;
   border-radius: 16px;
   width: 378px;
   height: 300px;
@@ -82,7 +81,6 @@ body {
   align-items: center;
 }
 .section__heading {
-  width: 584px;
   padding-right: 135px;
 }
 
@@ -136,15 +134,21 @@ body {
   .section {
     display: flex;
     flex-direction: column;
+    gap: 64px;
+    padding-top: 51px;
   }
   .heading {
     text-align: center;
     font-size: 32px;
   }
   .heading__text {
-    font-size: 16px;
+    font-size: 14px;
   }
   .img {
+    width: 344px;
+    height: 236px;
+  }
+  .heading__img {
     width: 344px;
     height: 236px;
   }
