--- a/style.scss
+++ b/style.scss
@@ -28,7 +28,6 @@ body {
 }
 
 .top__title {
-    padding-left: 120px;
     padding-top: 218px;
     padding-bottom: 682px;
 }
@@ -59,14 +58,14 @@ body {
 }
 
 .product__content {
+    padding-top: 128px;
+    padding-bottom: 128px;
     display: flex;
     gap: 32px;   
     background-image: url(img/Rectangle\ 5.jpg);
 }
 
 .product {
-    margin-top: 128px;
-    margin-bottom: 128px;
     border-radius: 16px;
     width: 378px;
     height: 300px;
@@ -83,7 +82,6 @@ body {
     justify-content: space-between;
     align-items: center;
     &__heading {
-        width: 584px;
         padding-right: 135px;
         
     }
