--- a/style.scss
+++ b/style.scss
@@ -24,28 +24,27 @@ body {
     color: #FFFFFF;
     font-size: 64px;
     max-width: 788px;
-    margin-bottom: 32px;
-    
+    margin-bottom: 32px;    
 }
 
-.top {
-    padding-left: 120px;
+.top__title {
     padding-top: 218px;
+    padding-bottom: 682px;
 }
+
 
 .top__text {
     color: #FFFFFF;
     font-size: 18px;
     margin-bottom: 44px;
     max-width: 481px;   
-
 }
 
 .top__text_new {
     font-weight: 700;
 }
 
-.top__button {
+.button {
     font-size: 18px;
     color: #FFFFFF;
     border-radius: 30px;
@@ -53,20 +52,72 @@ body {
     #9C0332;
     width: 234px;
     height: 48px;
-    margin-bottom: 493px;
+    &:hover {
+       background-color: #EB443F;
+    }    
 }
 
-.product__content {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 32px;
-    padding-bottom: 128px;
+.game__box {
     padding-top: 128px;
+    padding-bottom: 128px;
+    display: flex;
+    gap: 32px;   
     background-image: url(img/Rectangle\ 5.jpg);
+}
+
+.game {
+    position: relative;
+
+    &__title {
+        position: absolute;
+        left: 32px;
+        top: 236px;
+        color: #FFF;
+        font-family: Montserrat;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 32px;
+
+    }
 }
 
 .product {
     border-radius: 16px;
+    width: 379px;
+    height: 300px;
+    &:hover {
+        outline: 3px solid #44D2FF;
+    }
+}
+
+.section {
+    background-image: url(img/Rectangle\ 6.jpg);
+    padding-top: 282px;
+    padding-bottom: 282px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &__heading {
+        padding-right: 135px;
+        
+    }
+}
+
+.heading {    
+    color: #FFFFFF;
+    font-size: 48px;
+    margin-bottom: 32px;
+    &__text {
+        font-size: 18px;
+        color: #FFFFFF;
+        font-weight: 300;
+        margin-bottom: 32px;
+    }    
+    &__img {
+        width: 485px;
+        height: 333px;
+    }    
 }
 
 @import 'mobile';
