--- a/_mobile.scss
+++ b/_mobile.scss
@@ -55,6 +55,7 @@
         font-size: 32px;
         &__text {
             font-size: 14px;
+            text-align: center;
         }
     }
     .img {
