--- a/_mobile.scss
+++ b/_mobile.scss
@@ -61,11 +61,14 @@
     .img {
         width: 344px;
         height: 236px;
+        order: 1;
     }
 
     .heading__img {
         width: 344px;
         height: 236px;
     }
+
+    
     }
     
