--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
   font-size: 18px;
   margin-bottom: 44px;
   max-width: 481px;
+  line-height: 32px;
 }
 
 .top__text_new {
@@ -89,12 +90,23 @@ body {
 
 .section {
   background-image: url(img/Rectangle\ 6.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   padding-top: 282px;
   padding-bottom: 282px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 135px;
+}
+.section__riddle {
+  background-image: url(img/riddlebgr.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  line-height: 32px;
 }
 
 .heading {
@@ -107,10 +119,24 @@ body {
   color: #FFFFFF;
   font-weight: 300;
   margin-bottom: 32px;
+  line-height: 32px;
 }
 .heading__img {
   width: 485px;
   height: 333px;
+}
+
+.footer {
+  background-image: url(img/Rectangle\ 6.jpg);
+}
+
+.footer__text {
+  text-align: center;
+  font-weight: 400;
+  font-size: 12px;
+  color: #FFFFFF;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 @media (max-width: 767px) {
